# PubMed

./: README.md  pyproject.toml
pubmed/: clean_person_profiles.py  match.py  result.py
pubmed/documentation/: documentation.docx
pubmed/etl/: extract_from_pubmed_api.py  load.py  main.py  transform.py
pubmed/result/: match_result.tsv
